alaehParser.java
// Generated from alaeh.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class alaehParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		IF=1, ELSEIF=2, ELSE=3, ENDIF=4, SWITCH=5, CASE=6, BREAK=7, PRINT=8, FOR=9, 
		LOOP=10, PLUS=11, EQUAL=12, ASSIGN=13, NOTEQUAL=14, MORETHAN=15, MOREQUAL=16, 
		LESSTHAN=17, LESQUAL=18, MINUS=19, INCREMENT=20, DECREMENT=21, SEMICOLON=22, 
		COLON=23, LPAREN=24, RPAREN=25, QUOTE=26, LCURL=27, RCURL=28, INTEGER=29, 
		NAME=30, WSSKIP=31, NEWLINE=32;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_assignstmt = 2, RULE_ifstmt = 3, 
		RULE_elseifstmt = 4, RULE_elsestmt = 5, RULE_endif = 6, RULE_switchstmt = 7, 
		RULE_casestmt = 8, RULE_conditionstmt = 9, RULE_forloopstmt = 10, RULE_printstmt = 11, 
		RULE_expression = 12, RULE_term = 13, RULE_identifier = 14, RULE_integer = 15, 
		RULE_string = 16;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statement", "assignstmt", "ifstmt", "elseifstmt", "elsestmt", 
			"endif", "switchstmt", "casestmt", "conditionstmt", "forloopstmt", "printstmt", 
			"expression", "term", "identifier", "integer", "string"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'kapag'", "'o_kapag'", "'pag_hinde'", "'tapuse'", "'lipate'", 
			"'lagay'", "'itigil'", "'pakitahe'", "'para'", "'ulite'", "'+'", "'=='", 
			"'='", "'!='", "'>'", "'>='", "'<'", "'<='", "'-'", "'++'", "'--'", "';'", 
			"':'", "'('", "')'", "'\"'", "'{'", "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "IF", "ELSEIF", "ELSE", "ENDIF", "SWITCH", "CASE", "BREAK", "PRINT", 
			"FOR", "LOOP", "PLUS", "EQUAL", "ASSIGN", "NOTEQUAL", "MORETHAN", "MOREQUAL", 
			"LESSTHAN", "LESQUAL", "MINUS", "INCREMENT", "DECREMENT", "SEMICOLON", 
			"COLON", "LPAREN", "RPAREN", "QUOTE", "LCURL", "RCURL", "INTEGER", "NAME", 
			"WSSKIP", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "alaeh.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public alaehParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << SWITCH) | (1L << PRINT) | (1L << FOR) | (1L << INTEGER) | (1L << NAME))) != 0)) {
				{
				{
				setState(34);
				statement();
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public AssignstmtContext assignstmt() {
			return getRuleContext(AssignstmtContext.class,0);
		}
		public ForloopstmtContext forloopstmt() {
			return getRuleContext(ForloopstmtContext.class,0);
		}
		public ConditionstmtContext conditionstmt() {
			return getRuleContext(ConditionstmtContext.class,0);
		}
		public PrintstmtContext printstmt() {
			return getRuleContext(PrintstmtContext.class,0);
		}
		public IfstmtContext ifstmt() {
			return getRuleContext(IfstmtContext.class,0);
		}
		public SwitchstmtContext switchstmt() {
			return getRuleContext(SwitchstmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(46);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				assignstmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(41);
				forloopstmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(42);
				conditionstmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(43);
				printstmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(44);
				ifstmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(45);
				switchstmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignstmtContext extends ParserRuleContext {
		public TerminalNode NAME() { return getToken(alaehParser.NAME, 0); }
		public TerminalNode ASSIGN() { return getToken(alaehParser.ASSIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public AssignstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).enterAssignstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).exitAssignstmt(this);
		}
	}

	public final AssignstmtContext assignstmt() throws RecognitionException {
		AssignstmtContext _localctx = new AssignstmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignstmt);
		try {
			setState(57);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				match(NAME);
				setState(49);
				match(ASSIGN);
				setState(50);
				expression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(51);
				match(NAME);
				setState(52);
				match(ASSIGN);
				setState(53);
				string();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(54);
				match(NAME);
				setState(55);
				match(ASSIGN);
				setState(56);
				integer();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfstmtContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(alaehParser.IF, 0); }
		public TerminalNode LPAREN() { return getToken(alaehParser.LPAREN, 0); }
		public ConditionstmtContext conditionstmt() {
			return getRuleContext(ConditionstmtContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(alaehParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(alaehParser.COLON, 0); }
		public ElseifstmtContext elseifstmt() {
			return getRuleContext(ElseifstmtContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public IfstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).enterIfstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).exitIfstmt(this);
		}
	}

	public final IfstmtContext ifstmt() throws RecognitionException {
		IfstmtContext _localctx = new IfstmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ifstmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			match(IF);
			setState(60);
			match(LPAREN);
			setState(61);
			conditionstmt();
			setState(62);
			match(RPAREN);
			setState(63);
			match(COLON);
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << SWITCH) | (1L << PRINT) | (1L << FOR) | (1L << INTEGER) | (1L << NAME))) != 0)) {
				{
				{
				setState(64);
				statement();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(70);
			elseifstmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElseifstmtContext extends ParserRuleContext {
		public TerminalNode ELSEIF() { return getToken(alaehParser.ELSEIF, 0); }
		public TerminalNode LPAREN() { return getToken(alaehParser.LPAREN, 0); }
		public ConditionstmtContext conditionstmt() {
			return getRuleContext(ConditionstmtContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(alaehParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(alaehParser.COLON, 0); }
		public ElsestmtContext elsestmt() {
			return getRuleContext(ElsestmtContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ElseifstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elseifstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).enterElseifstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).exitElseifstmt(this);
		}
	}

	public final ElseifstmtContext elseifstmt() throws RecognitionException {
		ElseifstmtContext _localctx = new ElseifstmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_elseifstmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(ELSEIF);
			setState(73);
			match(LPAREN);
			setState(74);
			conditionstmt();
			setState(75);
			match(RPAREN);
			setState(76);
			match(COLON);
			setState(80);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << SWITCH) | (1L << PRINT) | (1L << FOR) | (1L << INTEGER) | (1L << NAME))) != 0)) {
				{
				{
				setState(77);
				statement();
				}
				}
				setState(82);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(83);
			elsestmt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElsestmtContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(alaehParser.ELSE, 0); }
		public TerminalNode COLON() { return getToken(alaehParser.COLON, 0); }
		public EndifContext endif() {
			return getRuleContext(EndifContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ElsestmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_elsestmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).enterElsestmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).exitElsestmt(this);
		}
	}

	public final ElsestmtContext elsestmt() throws RecognitionException {
		ElsestmtContext _localctx = new ElsestmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_elsestmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(85);
			match(ELSE);
			setState(86);
			match(COLON);
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << SWITCH) | (1L << PRINT) | (1L << FOR) | (1L << INTEGER) | (1L << NAME))) != 0)) {
				{
				{
				setState(87);
				statement();
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(93);
			endif();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndifContext extends ParserRuleContext {
		public TerminalNode ENDIF() { return getToken(alaehParser.ENDIF, 0); }
		public EndifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endif; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).enterEndif(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).exitEndif(this);
		}
	}

	public final EndifContext endif() throws RecognitionException {
		EndifContext _localctx = new EndifContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_endif);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(ENDIF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SwitchstmtContext extends ParserRuleContext {
		public TerminalNode SWITCH() { return getToken(alaehParser.SWITCH, 0); }
		public TerminalNode LPAREN() { return getToken(alaehParser.LPAREN, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(alaehParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(alaehParser.COLON, 0); }
		public List<CasestmtContext> casestmt() {
			return getRuleContexts(CasestmtContext.class);
		}
		public CasestmtContext casestmt(int i) {
			return getRuleContext(CasestmtContext.class,i);
		}
		public SwitchstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_switchstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).enterSwitchstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).exitSwitchstmt(this);
		}
	}

	public final SwitchstmtContext switchstmt() throws RecognitionException {
		SwitchstmtContext _localctx = new SwitchstmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_switchstmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(SWITCH);
			setState(98);
			match(LPAREN);
			setState(99);
			term();
			setState(100);
			match(RPAREN);
			setState(101);
			match(COLON);
			setState(103); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(102);
				casestmt();
				}
				}
				setState(105); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CASE );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CasestmtContext extends ParserRuleContext {
		public TerminalNode CASE() { return getToken(alaehParser.CASE, 0); }
		public IntegerContext integer() {
			return getRuleContext(IntegerContext.class,0);
		}
		public TerminalNode COLON() { return getToken(alaehParser.COLON, 0); }
		public TerminalNode BREAK() { return getToken(alaehParser.BREAK, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public CasestmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_casestmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).enterCasestmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).exitCasestmt(this);
		}
	}

	public final CasestmtContext casestmt() throws RecognitionException {
		CasestmtContext _localctx = new CasestmtContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_casestmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(CASE);
			setState(108);
			integer();
			setState(109);
			match(COLON);
			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << SWITCH) | (1L << PRINT) | (1L << FOR) | (1L << INTEGER) | (1L << NAME))) != 0)) {
				{
				{
				setState(110);
				statement();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(116);
			match(BREAK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionstmtContext extends ParserRuleContext {
		public List<IntegerContext> integer() {
			return getRuleContexts(IntegerContext.class);
		}
		public IntegerContext integer(int i) {
			return getRuleContext(IntegerContext.class,i);
		}
		public TerminalNode EQUAL() { return getToken(alaehParser.EQUAL, 0); }
		public TerminalNode MORETHAN() { return getToken(alaehParser.MORETHAN, 0); }
		public TerminalNode MOREQUAL() { return getToken(alaehParser.MOREQUAL, 0); }
		public TerminalNode LESSTHAN() { return getToken(alaehParser.LESSTHAN, 0); }
		public TerminalNode LESQUAL() { return getToken(alaehParser.LESQUAL, 0); }
		public List<IdentifierContext> identifier() {
			return getRuleContexts(IdentifierContext.class);
		}
		public IdentifierContext identifier(int i) {
			return getRuleContext(IdentifierContext.class,i);
		}
		public ConditionstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).enterConditionstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).exitConditionstmt(this);
		}
	}

	public final ConditionstmtContext conditionstmt() throws RecognitionException {
		ConditionstmtContext _localctx = new ConditionstmtContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_conditionstmt);
		try {
			setState(198);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				integer();
				setState(119);
				match(EQUAL);
				setState(120);
				integer();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				integer();
				setState(123);
				match(MORETHAN);
				setState(124);
				integer();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(126);
				integer();
				setState(127);
				match(MOREQUAL);
				setState(128);
				integer();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(130);
				integer();
				setState(131);
				match(LESSTHAN);
				setState(132);
				integer();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(134);
				integer();
				setState(135);
				match(LESQUAL);
				setState(136);
				integer();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(138);
				integer();
				setState(139);
				match(EQUAL);
				setState(140);
				identifier();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(142);
				integer();
				setState(143);
				match(MORETHAN);
				setState(144);
				identifier();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(146);
				integer();
				setState(147);
				match(MOREQUAL);
				setState(148);
				identifier();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(150);
				integer();
				setState(151);
				match(LESSTHAN);
				setState(152);
				identifier();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(154);
				integer();
				setState(155);
				match(LESQUAL);
				setState(156);
				identifier();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(158);
				identifier();
				setState(159);
				match(EQUAL);
				setState(160);
				integer();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(162);
				identifier();
				setState(163);
				match(MORETHAN);
				setState(164);
				integer();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(166);
				identifier();
				setState(167);
				match(MOREQUAL);
				setState(168);
				integer();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(170);
				identifier();
				setState(171);
				match(LESSTHAN);
				setState(172);
				integer();
				}
				break;
			case 15:
				enterOuterAlt(_localctx, 15);
				{
				setState(174);
				identifier();
				setState(175);
				match(LESQUAL);
				setState(176);
				integer();
				}
				break;
			case 16:
				enterOuterAlt(_localctx, 16);
				{
				setState(178);
				identifier();
				setState(179);
				match(EQUAL);
				setState(180);
				identifier();
				}
				break;
			case 17:
				enterOuterAlt(_localctx, 17);
				{
				setState(182);
				identifier();
				setState(183);
				match(MORETHAN);
				setState(184);
				identifier();
				}
				break;
			case 18:
				enterOuterAlt(_localctx, 18);
				{
				setState(186);
				identifier();
				setState(187);
				match(MOREQUAL);
				setState(188);
				identifier();
				}
				break;
			case 19:
				enterOuterAlt(_localctx, 19);
				{
				setState(190);
				identifier();
				setState(191);
				match(LESSTHAN);
				setState(192);
				identifier();
				}
				break;
			case 20:
				enterOuterAlt(_localctx, 20);
				{
				setState(194);
				identifier();
				setState(195);
				match(LESQUAL);
				setState(196);
				identifier();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForloopstmtContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(alaehParser.FOR, 0); }
		public TerminalNode LPAREN() { return getToken(alaehParser.LPAREN, 0); }
		public ConditionstmtContext conditionstmt() {
			return getRuleContext(ConditionstmtContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(alaehParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(alaehParser.COLON, 0); }
		public TerminalNode LOOP() { return getToken(alaehParser.LOOP, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ForloopstmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forloopstmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).enterForloopstmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof alaehListener ) ((alaehListener)listener).exitForloopstmt(this);
		}
	}

	public final ForloopstmtContext forloopstmt() throws RecognitionException {
		ForloopstmtContext _localctx = new ForloopstmtContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_forloopstmt);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(200);
			match(FOR);
			setState(201);
			match(LPAREN);
			setState(202);
			conditionstmt();
			setState(203);
			match(RPAREN);
			setState(204);
			match(COLON);
			setState(208);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << IF) | (1L << SWITCH) | (1L << PRINT) | (1L << FOR) | (1L << INTEGER) | (1L << NAME))) != 0)) {
				{
				{
				setState(205);
				statement();
				}
				}
				setState(210);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(211);
			match(LOOP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
